homelab/terraform/plugins/drone/values/gitea-service-entry.yml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: gitea-hostname-alias
  namespace: ${ namespace }
spec:
  hosts:
    - ${ gitea_hostname }
  endpoints:
    - address: ${ gitea_service_name }
      ports:
        http: ${ gitea_service_port }
  location: MESH_INTERNAL
  resolution: DNS
  ports:
    - number: 80
      name: http
      protocol: HTTP
