homelab/terraform/plugins/drone/values/service-entry.yml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: ${ name }
  namespace: ${ namespace }
spec:
  hosts:
    - ${ hostname }
  endpoints:
    - address: ${ service_name }
      ports:
        http: ${ service_port }
  location: MESH_INTERNAL
  resolution: DNS
  ports:
    - number: 80
      name: http
      protocol: HTTP
